# node-enterprise

./: .gitignore  Cargo.toml  ENTERPRISE.md  PITCH.md  README.md
.github/workflows/: ci.yml  release.yml
crates/zerox1-aggregator/: Cargo.toml
crates/zerox1-aggregator/src/: api.rs  capital_flow.rs  main.rs  registry_8004.rs  store.rs
crates/zerox1-challenger/: Cargo.toml
crates/zerox1-challenger/src/: main.rs  monitor.rs  submit.rs
crates/zerox1-node/: Cargo.toml
crates/zerox1-node-enterprise/: Cargo.toml
crates/zerox1-node-enterprise/src/: api.rs  batch.rs  config.rs  constants.rs  identity.rs  logger.rs  main.rs  network.rs  node.rs  peer_state.rs  push_notary.rs  reputation.rs
crates/zerox1-node/src/: api.rs  bags.rs  config.rs  constants.rs  escrow.rs  inactive.rs  kora.rs  lease.rs  main.rs  network.rs  node.rs  registry_8004.rs  stake_lock.rs  trade.rs
crates/zerox1-protocol/src/: batch.rs  constants.rs  envelope.rs  error.rs  lib.rs  message.rs  payload.rs
deploy/systemd/: zerox1-node.service
programs/workspace/: Anchor.toml  package.json
programs/workspace/programs/agent-ownership/: Cargo.toml
programs/workspace/programs/behavior-log/: Cargo.toml
programs/workspace/programs/behavior-log/src/: lib.rs
programs/workspace/programs/challenge/: Cargo.toml
programs/workspace/programs/challenge/src/: lib.rs
programs/workspace/programs/escrow/: Cargo.toml
programs/workspace/programs/escrow/src/: lib.rs
programs/workspace/programs/lease/: Cargo.toml
programs/workspace/programs/lease/src/: lib.rs
programs/workspace/programs/stake-lock/: Cargo.toml
programs/workspace/programs/stake-lock/src/: lib.rs
programs/workspace/tests/: escrow.ts
sdk/: package-lock.json  package.json
sdk/src/: index.ts
