[package]
name    = "zerox1-challenger"
version.workspace = true
edition = "2021"

[[bin]]
name = "zerox1-challenger"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { version = "4", features = ["derive", "env"] }
anyhow             = { workspace = true }

# Added for challenge submission
solana-sdk                   = { workspace = true }
solana-client                = { workspace = true }
solana-rpc-client            = { workspace = true }
hex                          = { workspace = true }
base64                       = { workspace = true }
sha2                         = { workspace = true }
zerox1-protocol              = { path = "../zerox1-protocol" }
openssl                      = { workspace = true }

[features]
mainnet = []
