[package]
name = "zerox1-node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "zerox1-node"
path = "src/main.rs"

[dependencies]
zerox1-protocol = { path = "../zerox1-protocol" }
zerox1-sati-client = { path = "../zerox1-sati-client" }

serde = { workspace = true }
ciborium = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
bs58 = "0.5"

libp2p = { workspace = true }

solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }

async-trait = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
reqwest = { workspace = true }
url = "2.5"
openssl = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
axum = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }

[features]
devnet = []
trade  = []
bags   = ["trade"]
