[package]
name = "agent-ownership"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_ownership"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
localtest = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
